--- a/templates/base.html
+++ b/templates/base.html
@@ -112,13 +112,13 @@
       </nav>
     
       <div  style= "margin-left: 550px;">
-        <img src={% static "img/02.jpg" %} " width="400" height="590" >
+        <img src="{% static "/img/02.jpg" %}" width="400" height="590" >
         </div>
       <div class = "glow" style="color: white;" style="left: 700px;">
         <h2>Techit Konngon 61010389 [TonKra]</h2>
         </div>
         <div class="container1">
-            <img src={% static "img/03.jpg" %} alt="Nature" style="width:100%;">
+            <img src="{% static "/img/03.jpg" %}" alt="Nature" style="width:100%;">
             <div class="text-block">
               <h4>นครนายก</h4>
               <p>เขื่อนขุนด่านปราการชล</p>
